Backend - Edit authorization - apis, tess updated
