# app/src/docs/v1.api-spec.yaml
@@ -873,32 +873,6 @@ paths:
           $ref: "#/components/responses/UnprocessableEntity"
         default:
           $ref: '#/components/responses/Error'
-    put:
-      summary: Create a permit
-      operationId: createElectrificationPermit
-      tags:
-        - Electrification Permit
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Request-Permit'
-      responses:
-        '201':
-          description: Permit created successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DB-Permit'
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        "422":
-          $ref: "#/components/responses/UnprocessableEntity"
-        default:
-          $ref: '#/components/responses/Error'
   /electrification/permit/{permitId}:
     get:
       summary: Get a permit
@@ -930,17 +904,10 @@ paths:
         default:
           $ref: '#/components/responses/Error'
     put:
-      summary: Update a permit
-      operationId: updateElectrificationPermit
+      summary: Upsert a permit
+      operationId: upsertElectrificationPermit
       tags:
         - Electrification Permit
-      parameters:
-        - in: path
-          name: permitId
-          required: true
-          schema:
-            type: string
-            description: The ID of the permit to update
       requestBody:
         required: true
         content:
@@ -949,7 +916,7 @@ paths:
               $ref: '#/components/schemas/Request-Permit'
       responses:
         '200':
-          description: Permit updated successfully
+          description: Permit upserted successfully
           content:
             application/json:
               schema:
@@ -1988,32 +1955,6 @@ paths:
           $ref: "#/components/responses/UnprocessableEntity"
         default:
           $ref: '#/components/responses/Error'
-    put:
-      summary: Create a permit
-      operationId: createHousingPermit
-      tags:
-        - Housing Permit
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Request-Permit'
-      responses:
-        '201':
-          description: Permit created successfully
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/DB-Permit'
-        "401":
-          $ref: "#/components/responses/Unauthorized"
-        '403':
-          $ref: '#/components/responses/Forbidden'
-        "422":
-          $ref: "#/components/responses/UnprocessableEntity"
-        default:
-          $ref: '#/components/responses/Error'
   /housing/permit/{permitId}:
     get:
       summary: Get a permit
@@ -2029,7 +1970,7 @@ paths:
             description: The ID of the permit to update
       responses:
         '200':
-          description: Permit updated successfully
+          description: Permit upserted successfully
           content:
             application/json:
               schema:
@@ -2045,17 +1986,10 @@ paths:
         default:
           $ref: '#/components/responses/Error'
     put:
-      summary: Update a permit
-      operationId: updateHousingPermit
+      summary: Upsert a permit
+      operationId: upsertHousingPermit
       tags:
         - Housing Permit
-      parameters:
-        - in: path
-          name: permitId
-          required: true
-          schema:
-            type: string
-            description: The ID of the permit to update
       requestBody:
         required: true
         content:
